# working-with-files-with-strings

./: CMakeLists.txt  Doxyfile.bak  LICENSE
html/: annotated.html  classes.html  dir_68267d1309a1af8e8297ef4c3efbcdba.html  dir_d44c64559bbebec7f509842c48db8b23.html  files.html  functions.html  functions_vars.html  globals.html  globals_func.html  graph_legend.html  index.html  read_8c.html  read_8c__incl.map  read_8c__incl.md5  read_8c_source.html  read_8h.html  read_8h__incl.map  read_8h__incl.md5  read_8h_source.html  structStringArray-members.html  structStringArray.html  write_8c.html  write_8c__incl.map  write_8c__incl.md5  write_8c_source.html  write_8h.html  write_8h__incl.map  write_8h__incl.md5  write_8h_source.html
html/search/: all_1.js  all_2.js  all_3.js  classes_0.js  functions_0.js  functions_1.js  searchdata.js  variables_0.js  variables_1.js
include/: read.h  write.h
src/: read.c  write.c
